# RxForge

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  SELF_HOSTING.md  docker-compose.yml  package-lock.json  package.json  playwright.config.ts
.cargo/: audit.toml
.github/workflows/: ci.yml
backend/: Cargo.toml
backend/migrations/: 001_users.sql  002_apps.sql  003_oauth.sql  004_2fa.sql  005_analytics.sql  006_app_db_reservations.sql  007_app_tokens.sql  008_user_features.sql  009_oauth_codes_user_id.sql  010_analytics_indexes.sql  011_users_locked_permissions.sql  012_apps_db_scope.sql  013_oauth_clients_cascade.sql
backend/src/: analytics.rs  config.rs  couchdb.rs  error.rs  jwt.rs  lib.rs  main.rs  state.rs
backend/src/linker/: couchdb.rs  mod.rs  mongodb.rs
backend/src/middleware/: auth.rs
backend/src/models/: user.rs
backend/src/routes/: admin.rs  analytics.rs  apps.rs  auth.rs  db_browser.rs  mod.rs  oauth.rs  sync.rs  tester.rs  tokens.rs
backend/tests/: acl_test.rs  analytics_test.rs  apps_test.rs  auth_test.rs  couchdb_provision_test.rs  health_test.rs  oauth_test.rs  sync_test.rs  twofa_test.rs  user_model_test.rs
backend/tests/common/: mod.rs
design/: RxForge Brand-print.html  RxForge Brand.html  kcalc-backup-2026-04-25.json  login-form.jsx  logos.jsx  splash-screens.jsx
docker/: README.md  docker-compose.dev.yml
frontend/: .env.example  README.md  package.json  svelte.config.js  vite.config.ts
plugin/: README.md  package.json  rxforge-sync.ts  tsconfig.json  vitest.config.ts
plugin/src/: auth.ts  (+5 more)
test-app/: index.html
(+35 files in other folders)
